--- a/notebooks/Debug MCMC continue.ipynb
+++ b/notebooks/Debug MCMC continue.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -13,14 +15,11 @@
     "import astropy.units as u\n",
     "from astropy.table import Table\n",
     "from astropy.constants import G\n",
-    "from astropy.stats import median_absolute_deviation\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
-    "from matplotlib.gridspec import GridSpec\n",
     "import h5py\n",
-    "import schwimmbad\n",
     "\n",
     "from thejoker import JokerSamples, JokerParams, TheJoker\n",
     "from thejoker.sampler.mcmc import TheJokerMCMCModel\n",
@@ -30,8 +29,8 @@
     "from twoface.db import (db_connect, AllStar, AllVisit, AllVisitToAllStar, \n",
     "                        StarResult, Status, JokerRun, initialize_db)\n",
     "from twoface.data import APOGEERVData\n",
-    "from twoface.plot import plot_data_orbits, plot_mcmc_diagnostic, plot_phase_fold\n",
-    "from twoface.samples_analysis import unimodal_P"
+    "from twoface.plot import plot_two_panel, plot_mcmc_diagnostic, plot_phase_fold\n",
+    "from twoface.mass import stellar_radius, get_m2_min"
    ]
   },
   {
@@ -42,7 +41,20 @@
    },
    "outputs": [],
    "source": [
-    "samples_file = path.join(TWOFACE_CACHE_PATH, 'apogee-jitter.hdf5')"
+    "plot_path = path.abspath('../plots/mcmc-unimodal')\n",
+    "os.makedirs(plot_path, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "samples_file = path.join(TWOFACE_CACHE_PATH, 'apogee-jitter.hdf5')\n",
+    "mcmc_samples_file = path.join(TWOFACE_CACHE_PATH, 'apogee-jitter-mcmc.hdf5')"
    ]
   },
   {
@@ -68,6 +80,195 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "apogee_ids = []\n",
+    "with h5py.File(mcmc_samples_file) as f:\n",
+    "    for i, apogee_id in enumerate(f.keys()):\n",
+    "        if i == 0:\n",
+    "            R = np.zeros((len(f.keys()), len(f[apogee_id]['chain-stats/gelman_rubin'])))\n",
+    "            \n",
+    "        R[i] = f[apogee_id]['chain-stats/gelman_rubin']\n",
+    "        apogee_ids.append(apogee_id)\n",
+    "apogee_ids = np.array(apogee_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_, bins, _ = plt.hist(R.max(axis=1), bins=np.linspace(1, 5, 64));\n",
+    "_, bins, _ = plt.hist(np.median(R, axis=1), bins=bins);\n",
+    "plt.axvline(1.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx = np.mean(R, axis=1) < 1.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5py.File(mcmc_samples_file) as f:\n",
+    "    for key in apogee_ids[idx]:\n",
+    "        samples = JokerSamples.from_hdf5(f[key])\n",
+    "        data = AllStar.get_apogee_id(session, key).apogeervdata()\n",
+    "        samples.t0 = data.t0\n",
+    "        \n",
+    "        fig = plot_two_panel(data, samples, plot_data_orbits_kw=dict(highlight_P_extrema=False))\n",
+    "        fig.savefig(path.join(plot_path, '{0}.png'.format(key)), dpi=250)\n",
+    "        plt.close(fig)\n",
+    "        \n",
+    "        fig = plot_phase_fold(data, samples[np.random.randint(len(samples))])\n",
+    "        fig.savefig(path.join(plot_path, '{0}-phase.png'.format(key)), dpi=250)\n",
+    "        plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Ps = []\n",
+    "Perrs = []\n",
+    "eccs = []\n",
+    "eccerrs = []\n",
+    "loggs = []\n",
+    "Ms = []\n",
+    "with h5py.File(mcmc_samples_file) as f:\n",
+    "    for key in apogee_ids:\n",
+    "        Ps.append(np.mean(f[key]['P']))\n",
+    "        eccs.append(np.mean(f[key]['e']))\n",
+    "        Perrs.append(np.std(f[key]['P']))\n",
+    "        eccerrs.append(np.std(f[key]['e']))\n",
+    "        \n",
+    "        star = AllStar.get_apogee_id(session, key)\n",
+    "        loggs.append(star.logg)\n",
+    "        Ms.append(star.martig_mass)\n",
+    "        \n",
+    "full_tbl = Table({\n",
+    "    'P': Ps, 'P_err': Perrs,\n",
+    "    'e': eccs, 'e_err': eccerrs,\n",
+    "    'logg': loggs, 'M1': Ms\n",
+    "})\n",
+    "\n",
+    "tbl = full_tbl[idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_t1 = tbl[ (tbl['logg'] > 2.)]\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(6, 6))\n",
+    "\n",
+    "ax.errorbar(_t1['P'], _t1['e'], xerr=_t1['P_err'], yerr=_t1['e_err'], \n",
+    "            marker='o', linestyle='none')\n",
+    "\n",
+    "ax.set_xscale('log')\n",
+    "ax.set_xlim(1, 2000)\n",
+    "ax.set_ylim(-0.02, 1.02);\n",
+    "\n",
+    "ax.set_xlabel('period, $P$ [day]')\n",
+    "ax.set_ylabel('eccentricity, $e$')\n",
+    "\n",
+    "fig.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xs = []\n",
+    "xerrs = []\n",
+    "ys = []\n",
+    "yerrs = []\n",
+    "with h5py.File(mcmc_samples_file) as f:\n",
+    "    for key in apogee_ids[idx][(tbl['logg'] > 2.) & (tbl['M1'] > 0)]:\n",
+    "        star = AllStar.get_apogee_id(session, key)\n",
+    "        M = star.martig_mass*u.Msun\n",
+    "        R = stellar_radius(star, M)\n",
+    "        \n",
+    "        xs.append(np.mean(f[key]['P']) / np.sqrt(R**3 / (G*M)).to(u.day).value)\n",
+    "        ys.append(np.mean(f[key]['e']))\n",
+    "        \n",
+    "        xerrs.append(np.std(f[key]['P']) / np.sqrt(R**3 / (G*M)).to(u.day).value)\n",
+    "        yerrs.append(np.std(f[key]['e']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 1, figsize=(6, 6))\n",
+    "\n",
+    "ax.errorbar(xs, ys, xerr=xerrs, yerr=yerrs, \n",
+    "            marker='o', linestyle='none')\n",
+    "\n",
+    "ax.set_xscale('log')\n",
+    "ax.set_xlim(1, 10000)\n",
+    "ax.set_ylim(-0.02, 1.02);\n",
+    "\n",
+    "ax.set_xlabel(r'$P / P_\\odot$')\n",
+    "ax.set_ylabel('eccentricity, $e$')\n",
+    "\n",
+    "fig.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 1, figsize=(6, 6))\n",
+    "\n",
+    "# ax.errorbar(full_tbl['P'], full_tbl['logg'], \n",
+    "#             marker='o', linestyle='none')\n",
+    "ax.errorbar(tbl['P'], tbl['logg'], xerr=tbl['P_err'], \n",
+    "            marker='o', linestyle='none')\n",
+    "\n",
+    "ax.set_xscale('log')\n",
+    "ax.set_xlim(1, 2000)\n",
+    "ax.set_ylim(4, 0);\n",
+    "\n",
+    "ax.set_xlabel('period, $P$ [day]')\n",
+    "# ax.set_ylabel('eccentricity, $e$')\n",
+    "\n",
+    "fig.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -90,7 +291,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "star = AllStar.get_apogee_id(session, '2M03002442+4423109')\n",
@@ -100,7 +303,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with h5py.File(samples_file, 'r') as f:\n",
@@ -110,7 +315,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "_ = plot_data_orbits(data, samples)"
@@ -119,7 +326,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# model = TheJokerMCMCModel(params, data)\n",
@@ -133,7 +342,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pars = model.pack_samples(sams)\n",
@@ -147,7 +358,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%%time\n",
@@ -163,7 +376,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "_ = plot_mcmc_diagnostic(sampler.chain)"
@@ -172,7 +387,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "derps = model.unpack_samples_mcmc(sampler.chain[:, -1])\n",
@@ -182,7 +399,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "_ = plot_phase_fold(star, derps[0])"
@@ -191,7 +410,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "_ = plot_data_orbits(data, derps, xlim_choice='tight', highlight_P_extrema=False)"
@@ -207,7 +428,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# needs mcmc\n",
@@ -451,7 +674,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
