--- a/notebooks/apogee-jitter results.ipynb
+++ b/notebooks/apogee-jitter results.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -50,33 +52,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "for i in range(5):\n",
-    "    status = session.query(Status).filter(Status.id == i).limit(1).one()\n",
-    "    n = session.query(AllStar)\\\n",
-    "               .join(StarResult, JokerRun, Status)\\\n",
-    "               .filter(Status.id == i).count()\n",
-    "    print(\"Status: {0} ({1}) - {2}\".format(status.message, status.id, n))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "n_samples, = session.query(JokerRun.requested_samples_per_star).filter(JokerRun.name == 'apogee-jitter').one()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -88,9 +63,59 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stars = session.query(AllStar).join(StarResult, JokerRun, Status).filter(Status.id > 0).all()\n",
+    "apogee_ids = np.array([star.apogee_id for star in stars])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qs = [1, 5, 25, 50, 75, 95, 99]\n",
+    "lnK_perc = np.zeros((len(stars), len(qs)))\n",
+    "\n",
+    "with h5py.File(samples_file, 'r') as f:\n",
+    "    for i, star in enumerate(stars):\n",
+    "        lnK = np.log(f[star.apogee_id]['K'][:])\n",
+    "        lnK_perc[i] = np.percentile(lnK, qs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 1, figsize=(8, 6))\n",
+    "\n",
+    "_, bins, _ = ax.hist(lnK_perc[:, 0], bins='auto', alpha=0.4, label='1');\n",
+    "ax.hist(lnK_perc[:, 1], bins=bins, alpha=0.4, label='5');\n",
+    "ax.hist(lnK_perc[:, 2], bins=bins, alpha=0.4, label='25');\n",
+    "ax.legend(title=r'$\\ln K$ percentile', fontsize=16)\n",
+    "\n",
+    "ax.axvline(0., zorder=10, color='k', alpha=0.5, linestyle='--')\n",
+    "\n",
+    "ax.set_yscale('log')\n",
+    "ax.set_xlabel(r'$\\ln\\left(\\frac{K}{{\\rm km}\\,{\\rm s}^{-1}}\\right)$')\n",
+    "ax.xaxis.set_ticks(np.arange(-10, 8+1, 2));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Period dist. stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "stars = session.query(AllStar).join(StarResult, JokerRun, Status).filter(Status.id == 4).all()\n",
@@ -100,7 +125,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%%time\n",
@@ -132,7 +159,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "unimodals.sum()"
@@ -141,7 +170,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(6, 6))\n",
@@ -152,7 +183,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "test = (np.abs(kurtosis-0.5) < 0.01) & np.abs(skewness < 0.01)\n",
@@ -162,7 +195,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with h5py.File(samples_file) as f:\n",
@@ -182,6 +217,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -285,7 +321,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# needs more samples\n",
@@ -311,7 +349,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "os.makedirs('../plots/needs-mcmc', exist_ok=True)\n",
@@ -1159,7 +1199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
