change name of plot func

--- a/notebooks/apogee-jitter results.ipynb
+++ b/notebooks/apogee-jitter results.ipynb
@@ -33,7 +33,7 @@
     "from twoface.db import (db_connect, AllStar, AllVisit, AllVisitToAllStar, \n",
     "                        StarResult, Status, JokerRun, initialize_db)\n",
     "from twoface.data import APOGEERVData\n",
-    "from twoface.plot import plot_data_orbits, plot_two_panel, plot_phase_fold\n",
+    "from twoface.plot import plot_data_orbits, plot_two_panel, plot_phase_fold_residual\n",
     "from twoface.mass import m2_func\n",
     "from twoface.samples_analysis import unimodal_P"
    ]
@@ -1199,7 +1199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
