--- a/notebooks/figures/Numbers of visits and sample overview.ipynb
+++ b/notebooks/figures/Numbers of visits and sample overview.ipynb
@@ -21,7 +21,7 @@
     "from sqlalchemy import func\n",
     "\n",
     "from twoface import TWOFACE_CACHE_PATH\n",
-    "from twoface.db import (db_connect, AllStar, AllVisit, AllVisitToAllStar, RedClump,\n",
+    "from twoface.db import (db_connect, AllStar, AllVisit, AllVisitToAllStar, \n",
     "                        StarResult, Status, JokerRun, initialize_db)\n",
     "from twoface.data import APOGEERVData\n",
     "from twoface.plot import plot_data_orbits\n",
@@ -70,8 +70,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"{0} unique stars in TwoFace DB\".format(session.query(AllStar).distinct(AllStar.apogee_id).count()))\n",
-    "print(\"{0} visits in TwoFace DB\".format(session.query(AllVisit).count()))"
+    "print(\"{0} unique stars in TwoFace DB\".format(session.query(AllStar.apogee_id).distinct().count()))\n",
+    "print(\"{0} visits in TwoFace DB\".format(session.query(AllVisit.id).distinct().count()))"
    ]
   },
   {
@@ -96,12 +96,16 @@
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(6, 4))\n",
     "\n",
-    "_ = ax.hist(nvisits, bins=np.logspace(0.5, 7, 25, base=2.), rasterized=True)\n",
+    "_ = ax.hist(nvisits, bins=np.logspace(0.5, 7, 22, base=2.), rasterized=True)\n",
     "ax.set_xscale('log', basex=2)\n",
     "ax.set_yscale('log')\n",
-    "ax.set_xlim(3, 128)\n",
+    "ax.set_xlim(2.5, 140)\n",
+    "ax.set_ylim(0.8, 10**5.1)\n",
     "\n",
     "ax.xaxis.set_ticks(2**np.arange(2, 7+1, 1))\n",
+    "ax.xaxis.set_ticklabels([str(x) for x in ax.get_xticks()])\n",
+    "\n",
+    "ax.yaxis.set_ticks(10**np.arange(0, 5+1, 1))\n",
     "ax.set_xlabel('$N$ visits')\n",
     "ax.set_ylabel('$N$ stars')\n",
     "\n",
