--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -453,12 +453,12 @@ used.
     uniform distribution over the domain $(a, b)$, and $\mathcal{N}(\mu,
     \sigma^2)$ is the normal distribution with mean $\mu$ and variance
     $\sigma^2$.
-    For the systemic velocity and semi-amplitude, we use a broad Gaussian prior
-    that is formally inconsistent between \thejoker\ and follow-up MCMC sampling
-    (see \sectionname~\ref{sec:mcmc}): in \thejoker\ we assume Gaussian priors
-    with $\sigma_v$ much larger than the measurement uncertainty so they can be
-    neglected ($\sigma_v \approx \infty$), whereas when running MCMC we fix
-    $\sigma_v = 10^3~\kms$.}
+    For the systemic velocity and semi-amplitude, $(v_0, K)$, we use a broad
+    Gaussian prior that is formally inconsistent between \thejoker\ and
+    follow-up MCMC sampling (see \sectionname~\ref{sec:mcmc}): in \thejoker\ we
+    assume Gaussian priors with $\sigma_v$ much larger than the measurement
+    uncertainty so they can be neglected ($\sigma_v \approx \infty$), whereas
+    when running MCMC we fix $\sigma_v = 10^3~\kms$.}
     \label{tbl:params}
 \end{table}
 
