--- a/notebooks/figures/Infer jitter.ipynb
+++ b/notebooks/figures/Infer jitter.ipynb
@@ -22,7 +22,7 @@
     "from sqlalchemy import func\n",
     "from scipy.optimize import root\n",
     "\n",
-    "from twoface.db import (db_connect, AllStar, AllVisit, AllVisitToAllStar, RedClump,\n",
+    "from twoface.db import (db_connect, AllStar, AllVisit, AllVisitToAllStar, \n",
     "                        StarResult, Status, JokerRun, initialize_db)\n",
     "\n",
     "from thejoker import JokerParams, TheJoker, JokerSamples\n",
@@ -42,7 +42,8 @@
    "outputs": [],
    "source": [
     "# Here we intentionally use the old run:\n",
-    "TWOFACE_CACHE_PATH = '../../cache/run2/'"
+    "TWOFACE_CACHE_PATH = '../../cache/run2/'\n",
+    "figures_path = '../../paper/1-catalog/figures/'"
    ]
   },
   {
@@ -79,6 +80,7 @@
    "source": [
     "# load the run parameters:\n",
     "run = session.query(JokerRun).filter(JokerRun.name == 'apogee-jitter').one()\n",
+    "params = run.get_joker_params()\n",
     "\n",
     "# load the posterior samples:\n",
     "samples_file = path.join(TWOFACE_CACHE_PATH, '{0}.hdf5'.format(run.name))"
@@ -149,12 +151,16 @@
     "    # Values that aren't filled get set to nan\n",
     "    N = len(stars)\n",
     "    y_nk = np.full((N, 256), np.nan)\n",
+    "    ln_p0 = np.full((N, 256), np.nan)\n",
     "    \n",
     "    for n, key in enumerate([s.apogee_id for s in stars]):\n",
     "        K = len(f[key]['jitter'])\n",
     "        \n",
     "        s = f[key]['jitter'][:] * 1000. # km/s to m/s\n",
-    "        y_nk[n,:K] = np.log(s**2)\n",
+    "        y = np.log(s**2)\n",
+    "        y_nk[n, :K] = y\n",
+    "        ln_p0[n, :K] = ln_normal(y, *params.jitter)\n",
+    "        \n",
     "        K_n.append(K)\n",
     "        apogee_ids.append(key)\n",
     "\n",
@@ -163,7 +169,7 @@
     "\n",
     "# for nulling out the probability for non-existing samples\n",
     "mask = np.zeros_like(y_nk)\n",
-    "mask[y_nk == 9999.] = -np.inf"
+    "mask[np.isnan(y_nk)] = -np.inf"
    ]
   },
   {
@@ -546,7 +552,7 @@
     "min_pars = mmix.unpack_pars(res.x)\n",
     "ll = mmix.ln_norm_func(y, **min_pars)\n",
     "\n",
-    "fig,axes = plt.subplots(1, 2, figsize=(12,5))\n",
+    "fig,axes = plt.subplots(1, 2, figsize=(10,5))\n",
     "\n",
     "axes[0].plot(y, np.exp(ll), marker='')\n",
     "axes[0].set_xlim(-10, 20)\n",
@@ -555,74 +561,19 @@
     "s = np.sqrt(np.exp(y))\n",
     "axes[1].plot(s, np.exp(ll) * 2/s, marker='')\n",
     "axes[1].set_xlim(-0.1, 400)\n",
-    "axes[1].set_xlabel('jitter, $s$ [{0:latex_inline}]'.format(u.m/u.s))\n",
+    "axes[1].set_xlabel('$s$ [{0:latex_inline}]'.format(u.m/u.s))\n",
     "\n",
-    "fig.savefig()"
+    "fig.suptitle('inferred excess variance parameter distribution', fontsize=22)\n",
+    "fig.tight_layout()\n",
+    "fig.subplots_adjust(top=0.9)\n",
+    "\n",
+    "fig.savefig(path.join(figures_path, 'infer-jitter.pdf'))"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import emcee"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "mmix = Model(y_nk[slc], K_n[slc], ln_p0[slc], \n",
-    "             n_components=2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "ndim = 5\n",
-    "nwalkers = 8*ndim\n",
-    "p0 = np.random.normal([0.7, 7, 10, 2, 2], [1E-3]*ndim, size=(nwalkers, ndim))\n",
-    "\n",
-    "for pp in p0:\n",
-    "    assert np.all(np.isfinite(mmix(pp)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "mmix([0.8, 7, 10, 2, 2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": []
   }
@@ -644,7 +595,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
